GH-16182: Updating user guide page Welcome to reflect makersaurus guidelines [nocheck] (#16183)
* ht/welcome massive restructure

* ht/added getting started

* ht/added flow users

* ht/added python users

* ht/added r users

* ht/added sparkling users

* ht/added api users

* ht/added java users

* ht/added hadoop users

* ht/added docker users

* ht/added kubernetes users

* ht/added experienced users

* ht/welcome & docker page fixes

* ht/hadoop page fixes

* ht/getting started page fixes

* ht/link fixes

* ht/link fixes

* ht/link & spacing fixes

* ht/minor fix

* ht/direct link for several sections

* ht/h2o > h2o-3 + others

several frm >from
note/admonition fixes
reorder hadoop example
several title lengthens

* ht/flow algo section w/ links to algo pages

* ht/added available algos + linux fix

* Update h2o-docs/src/product/getting-started/docker-users.rst

Co-authored-by: Adam Valenta <adam.valenta@h2o.ai>

* Update h2o-docs/src/product/getting-started/docker-users.rst

Co-authored-by: Adam Valenta <adam.valenta@h2o.ai>

* ht/requested updates; updated flow list to reflect app

* ht/added infogram to welcome page

* ht/rerun checks

---------

Co-authored-by: Adam Valenta <adam.valenta@h2o.ai>